Fixed responsive & spacing issue with mdl-cell in user details

--- a/app/app.css
+++ b/app/app.css
@@ -54,11 +54,16 @@ input {
 
 /* MDLite changes */
 .mdl-layout__header-row {
-  padding-left: 16px !important; 
+  padding-left: 16px !important;
 }
 
 .mdl-layout__header-row {
   padding-left: 40px;
+}
+
+.user-details .mdl-cell {
+  margin: 0 auto;
+  margin: 16px auto;
 }
 
 .mdl-button {
